Removed ESLint, added Template String Converter

--- a/jsessential/package.json
+++ b/jsessential/package.json
@@ -16,9 +16,8 @@
         "ecmel.vscode-html-css",
         "abusaidm.html-snippets",
         "xabikos.JavaScriptSnippets",
-        "rvest.vs-code-prettier-eslint",
         "wix.vscode-import-cost",
-        "dbaeumer.vscode-eslint",
+		"meganrogge.template-string-converter",
         "dsznajder.es7-react-js-snippets",
         "mikestead.dotenv",
         "formulahendry.auto-rename-tag",
